[gd_scene load_steps=6 format=3 uid="uid://cesllligv483m"]

[ext_resource type="Script" path="res://scripts/pipe_section.gd" id="1_o8bn1"]
[ext_resource type="Texture2D" uid="uid://bsnbjdytrn3lg" path="res://assets/pipe.png" id="1_ym5jl"]
[ext_resource type="Script" path="res://scripts/PointTrigger.gd" id="3_bqbu1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhipj"]
size = Vector2(16, 116)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dui1j"]
normal = Vector2(-1, 0)

[node name="pipeSection" type="Node2D"]
script = ExtResource("1_o8bn1")

[node name="TopPipe" type="RigidBody2D" parent="."]
collision_layer = 2
gravity_scale = 0.0
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(0, -59)
shape = SubResource("RectangleShape2D_vhipj")

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
position = Vector2(0, -59)
scale = Vector2(0.5, 3.625)
texture = ExtResource("1_ym5jl")

[node name="BottomPipe" type="RigidBody2D" parent="."]
position = Vector2(0, -1)
collision_layer = 2
gravity_scale = 0.0
freeze = true
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(0, 59.375)
shape = SubResource("RectangleShape2D_vhipj")

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
position = Vector2(2.38419e-07, 59.5)
scale = Vector2(0.5, 3.65625)
texture = ExtResource("1_ym5jl")

[node name="PointTrigger" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("3_bqbu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointTrigger"]
shape = SubResource("WorldBoundaryShape2D_dui1j")

[connection signal="body_entered" from="PointTrigger" to="PointTrigger" method="_on_body_entered"]
